<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="shibedays.com.droidcafesettings.MainActivity">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="always"
        android:icon="@drawable/ic_order_white"/>

    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="always"
        android:icon="@drawable/ic_status_white"/>

    <item
        android:id="@+id/action_fav"
        android:orderInCategory="40"
        android:title="@string/action_fav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_fav_white"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/appbar_settings"
        app:showAsAction="never"/>
</menu>
